Jumping box fixed loading the panels on dom:loaded. Refs #3088
System warnings made visible if there are any.
Outsourced panel arrow styles to core z-panel-indicator CSS class for general reuse.

--- a/src/style/core.css
+++ b/src/style/core.css
@@ -1760,6 +1760,19 @@ button.z-imagebutton, /* Buttons in inline 'ajax' forms */
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fafafa', endColorstr='#CFCFCF'); /*IE*/
 }
 
+.z-panels .z-panel-indicator {
+    background: url("../images/global/arrow_down_black.png") no-repeat scroll 7px 50%;
+    padding-left: 20px !important;
+}
+.z-panels .z-panel-indicator:hover {
+    background: url("../images/global/arrow_down_grey.png") no-repeat scroll 7px 50%;
+}
+.z-panels .z-panel-indicator.z-panel-active {
+    background: url("../images/global/arrow_right_black.png") no-repeat scroll 9px 50%;
+}
+.z-panels .z-panel-indicator.z-panel-active:hover {
+    background: url("../images/global/arrow_right_grey.png") no-repeat scroll 9px 50%;
+}
 
 /******************************************************************************
 * Order styles
